quiz is now converted to a single problem component

--- a/src/uLearnToEdx/code-template.html
+++ b/src/uLearnToEdx/code-template.html
@@ -1,18 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="stylesheet" type="text/css" href="codemirror.css">
-	<link rel="stylesheet" type="text/css" href="cobalt.css">
-	<link rel="stylesheet" type="text/css" href="show-hint.css">
-	<link rel="stylesheet" type="text/css" href="ulearn-auto.css">
-</head>
-<body>
-	<textarea class='code code-sample' data-lang="cs">{0}</textarea>
-	<script src="jquery-1.10.2.min.js"></script>
-	<script src="codemirror.js"></script>
-	<script src="clike.js"></script>
-	<script src="matchbrackets.js"></script>
-	<script src="active-line.js"></script>
-	<script src="slide-editor.js"></script>
-</body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<link rel="stylesheet" type="text/css" href="codemirror.css">
+		<link rel="stylesheet" type="text/css" href="ulearn-auto.css">
+	</head>
+	<body>
+		<textarea class='code code-sample' data-lang="cs">{0}</textarea>
+		<script src="jquery-1.10.2.min.js"></script>
+		<script src="codemirror.js"></script>
+		<script src="clike.js"></script>
+		<script src="matchbrackets.js"></script>
+		<script src="slide-editor.js"></script>
+	</body>
+</html>
