--- a/src/uLearnToEdx/iframe-template.html
+++ b/src/uLearnToEdx/iframe-template.html
@@ -1,11 +1,1 @@
-﻿<p>
-	<script language="javascript">
-// <![CDATA[
-  function resizeIframe(obj) {
-    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-  }
-// ]]></script>
-</p>
-<p>
-<iframe scrolling="no" src="/static/{0}.html" width="100%" frameborder="no" onload="javascript:resizeIframe(this);">You need an iFrame capable browser to view this.</iframe>
-</p>
+﻿<iframe scrolling="no" src="/static/{0}.html" width="100%" frameborder="no" onload="(function (obj) { obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px'; })(this);"></iframe>
