added gallery support

--- a/src/uLearnToEdx/code-template.html
+++ b/src/uLearnToEdx/code-template.html
@@ -6,10 +6,11 @@
 		<link rel="stylesheet" type="text/css" href="ulearn-auto.css">
 	</head>
 	<body>
-		<textarea class='code code-sample' data-lang="cs">{0}</textarea>
+		<textarea class='code code-sample' data-lang="{0}">{1}</textarea>
 		<script src="jquery-1.10.2.min.js"></script>
 		<script src="codemirror.js"></script>
 		<script src="clike.js"></script>
+		<script src="python.js"></script>
 		<script src="matchbrackets.js"></script>
 		<script src="slide-editor.js"></script>
 	</body>
