--- a/src/uLearnToEdx/iframe-template.html
+++ b/src/uLearnToEdx/iframe-template.html
@@ -1,1 +1,1 @@
-﻿<iframe scrolling="no" src="/static/{0}.html" width="100%" frameborder="no" onload="(function (obj) { obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px'; })(this);"></iframe>
+﻿<iframe scrolling="no" src="/static/{0}.html" width="100%" frameborder="no" onload="{1}"></iframe>
