Reacts controller and component for Plagiarisms page

--- a/src/uLearn.Web/frontend/public/index.html
+++ b/src/uLearn.Web/frontend/public/index.html
@@ -19,11 +19,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->    
-    <title>Ulearn</title>
+    <title>Ulearn</title>    
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+
+    <link rel="stylesheet" href="https://ulearn.me/ulearn.bundle.css">
   </head>
   <body>
     <noscript>
