--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -22,12 +22,22 @@
 
         <link rel="stylesheet" href="/ulearn.bundle.css">
         <link rel="stylesheet" href="/katex/katex.min.css">
-        <script language="JavaScript" src="/modernizr.bundle.js"></script>
+
+        <!-- Add Sentry (https://sentry.io) script for error logging -->
+        <script src="https://cdn.ravenjs.com/3.23.2/raven.min.js" crossorigin="anonymous"></script>
+        <script>
+            Raven.config('https://992e1a5327ad4e48af004ae709b51aba@sentry.io/181214').install()
+        </script>
+
+        <script src="/modernizr.bundle.js"></script>
     </head>
     <body>
         <noscript>
             You need to enable JavaScript to view this site.
         </noscript>
         <div id="root"></div>
+
+        <script src="/scripts.bundle.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
     </body>
 </html>
