--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -38,5 +38,7 @@
 
         <script src="/scripts.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
+        <script src="//code.highcharts.com/highcharts.js"></script>
+        <script src="//code.highcharts.com/modules/data.js"></script>
     </body>
 </html>
