Load ulearn.bundle.css in index.html
Load certificates and elmah directly from Ulearn.Web

--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -20,7 +20,8 @@
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
 
-        <link rel="stylesheet" href="/katex/katex.min.css">
+        <link rel="stylesheet" href="/ulearn.bundle.css" />
+        <link rel="stylesheet" href="/katex/katex.min.css" />
 
         <!-- Add Sentry (https://sentry.io) script for error logging -->
         <script src="https://cdn.ravenjs.com/3.23.2/raven.min.js" crossorigin="anonymous"></script>
