Show outdated message for old browsers

--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -28,16 +28,16 @@
         <script>
             Raven.config('https://992e1a5327ad4e48af004ae709b51aba@sentry.io/181214').install()
         </script>
-
-        <script src="/modernizr.bundle.js"></script>
     </head>
     <body>
         <noscript>
             You need to enable JavaScript to view this site.
         </noscript>
+        <div id="outdated"></div>
         <div id="root"></div>
 
         <script src="/scripts.bundle.js"></script>
+        <script src="/modernizr.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/data.js"></script>
