Insert frontend configuration into index.html

--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -36,6 +36,11 @@
         <div id="outdated"></div>
         <div id="root"></div>
 
+        <script>
+            /* Don't change following line. Backend inserts configuration in this line looking for pattern */
+            window.config = {};
+        </script>
+
         <script src="/scripts.bundle.js"></script>
         <script src="/modernizr.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
