Isolate legacy HTML content from new one with CSS class
Add '.legacy-page' to any content with old styles. It allows us don't mix old, vanilla css, and new, react+less, styles

--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -37,7 +37,7 @@
         <div id="root"></div>
 
         <script>
-            /* Don't change following line. Backend inserts configuration in this line looking for pattern */
+            /* Don't change next line. Backend inserts configuration in this line looking for pattern */
             window.config = {};
         </script>
 
