--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -37,11 +37,11 @@
         <div id="root"></div>
 
         <script>
-            /* Don't change next line. Backend inserts configuration in this line looking for pattern */
+            /* Don't change next line. Backend inserts configuration to this line looking for pattern */
             window.config = {};
         </script>
 
-        <script src="/scripts.bundle.js?v=20181221"></script>
+        <script src="/scripts.bundle.js?v=20190118"></script>
         <script src="/modernizr.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
