--- a/src/Frontend/public/index.html
+++ b/src/Frontend/public/index.html
@@ -26,7 +26,7 @@
         <!-- Add Sentry (https://sentry.io) script for error logging -->
         <script src="https://cdn.ravenjs.com/3.23.2/raven.min.js" crossorigin="anonymous"></script>
         <script>
-            Raven.config('https://992e1a5327ad4e48af004ae709b51aba@sentry.io/181214').install()
+            Raven.config('https://62e9c6b9ae6a47399a2b79600f1cacc5@sentry.skbkontur.ru/781').install()
         </script>
     </head>
     <body>
